--- a/BlazorApp/Pages/Events/EventList.razor
+++ b/BlazorApp/Pages/Events/EventList.razor
@@ -2,6 +2,59 @@
 
 <h1 class="mb-3">Event List</h1>
 
+@if (events == null) {
+
+    <p><em>Loading...</em></p>
+}
+else{
+	<a class="btn btn-primary mb-3 me-2" href="/Events/Create">Add Events</a>
+
+	<table class="table mb-5">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Date</th>
+                <th>All Day</th>
+                <th>Action</th>
+            </tr>
+        </thead>             
+        <tbody>
+            @foreach (var evt in events)
+            {
+                <tr>
+                    <td>@evt.Id</td>
+                    <td>@evt.Title</td>
+                    <td>@evt.Description</td>
+                    <td>@evt.Start.ToShortDateString()</td>
+                    <td>
+                        @if (evt.AllDay)
+                        {
+                            <span class="badge rounded-pill text-bg-success">Yes</span>
+                        }
+                        else
+                        {
+                            <span class="badge rounded-pill text-bg-warning">No</span>
+                        }
+                    </td>
+                    <td style="white-space: nowrap; width: 10px">
+                        <a class="btn btn-primary btn-sm" href="/Events/Edit/@evt.Id">
+                            Edit
+                        </a>
+                        <button class="btn btn-danger btn-sm">
+                            Delete
+                        </button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+
+}
+
+
 @inject HttpClient http
 
 @code {
