--- a/BlazorApp/Pages/Events/Create.razor
+++ b/BlazorApp/Pages/Events/Create.razor
@@ -7,6 +7,7 @@
 			<label class="col-md-4 col-form-label">Title</label>
 			<div class="col-md-8">
 				<input class="form-control" @bind="EventDtoData.Title">
+				<span class="text-danger">@Errors["Title"]?[0]</span>
 			</div>
 		</div>
 
@@ -14,6 +15,7 @@
 			<label class="col-md-4 col-form-label">Start Date</label>
 			<div class="col-md-8">
 				<input type="datetime-local" class="form-control" @bind="EventDtoData.Start">
+				<span class="text-danger">@Errors["Start"]?[0]</span>
 			</div>
 		</div>
 
@@ -21,13 +23,16 @@
 			<label class="col-md-4 col-form-label">End Date</label>
 			<div class="col-md-8">
 				<input type="datetime-local" class="form-control" @bind="EventDtoData.End">
+				<span class="text-danger">@Errors["End"]?[0]</span>
 			</div>
 		</div>
 
 		<div class="row mb-3">
 			<label class="col-md-4 col-form-label">Description</label>
+
 			<div class="col-md-8">
 				<textarea class="form-control" @bind="EventDtoData.Description"></textarea>
+				<span class="text-danger">@Errors["Description"]?[0]</span>
 			</div>
 		</div>
 
@@ -56,20 +61,32 @@
 
 @inject HttpClient http
 @inject NavigationManager navManager 
+@using System.Text.Json.Nodes
 @code {
-	public EventDto EventDtoData { set; get; } = new(); 
+	public EventDto EventDtoData { set; get; } = new();
+	public JsonNode Errors { set; get; } = new JsonObject();
 	private async Task SaveEvent() 
 	{ 
-		var response = await http. PostAsJsonAsync("api/Events", EventDtoData); 
-		if (response.IsSuccessStatusCode) 
-{ 
+		var response = await http. PostAsJsonAsync("api/Events", EventDtoData);
+		if (response.IsSuccessStatusCode)
+		{
 			// redirect to list of Events 
-			navManager.NavigateTo("/Events"); 
+			navManager.NavigateTo("/Events");
 		}
-else
+		else
 		{
 			var strResponse = await response.Content.ReadAsStringAsync();
 			Console.WriteLine("Json Response: \n" + strResponse);
+
+			try{
+				var jsonResponse = JsonNode.Parse(strResponse);
+				Errors = jsonResponse?["errors"] ?? new JsonObject();
+
+			}
+			catch(Exception ex){
+
+			}
 		}
+			
 	}
 }
